--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# directories
 bin/
 build/
 control_go2/catkin_ws/build
@@ -5,3 +6,7 @@ control_go2/catkin_ws/devel
 control_aliengo/catkin_ws/build
 control_aliengo/catkin_ws/devel
 Examples/ROS/ORB_SLAM2/build/
+Examples/ROS/ORB_SLAM2/bin/
+
+# files
+.swift-sfdc.json
